flipza-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app.kubernetes.io/name: servicetool
  name: servicetool
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: servicetool
  template:
    metadata:
      labels:
        app.kubernetes.io/name: servicetool    
    spec:
      containers:
      - image: flipza/servicetool
        imagePullPolicy: IfNotPresent
        name: servicetool
