flipza-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app.kubernetes.io/name: servicetool
  name: servicetool
spec:
  containers:
  - image: flipza/servicetool
    name: servicetool
