flipza-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /\$2
  name: order
  labels:
    app: servicetool
spec:
  rules:
  - http:
      paths:
      - path: /servicetool/
        pathType: Prefix
        backend:
          service:
            name: order
            port:
              number: 80
